# RhythHaus

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  init.sh  progress.md  renovate.json  roadmap.md  settings.gradle.kts
.github/workflows/: aboutlibraries-catalog.yml
.superpowers/sdd/: android-split-apk-releases-task-1-report.md  android-split-apk-releases-task-2-report.md  android-split-apk-releases-task-3-report.md  android-split-apk-releases-task-4-report.md  android-split-apk-releases-task-5-report.md  artwork-cursor-window-fix-report.md  final-release-fixes-report.md  final-security-fix-report.md  playlist-edit-mode-task-2-report.md  playlist-edit-mode-task-3-report.md  playlist-edit-mode-task-4-report.md  playlist-edit-mode-task-5-report.md  playlist-edit-mode-task-6-report.md  playlist-screen-task-1-report.md  playlist-screen-task-2-report.md  playlist-screen-task-3-report.md  playlist-screen-task-4-report.md  playlist-screen-task-5-report.md  playlist-screen-task-6-report.md  playlist-screen-task-7-report.md  polish-track-row-selected-copy-report.md  progress.md  replace-emoji-controls-with-icons-report.md  standardize-back-navigation-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  track-list-artwork-collapse-task-1-report.md  track-list-artwork-collapse-task-2-report.md  track-list-artwork-collapse-task-3-report.md  track-multi-select-playlist-backup-task-1-report.md  track-multi-select-playlist-backup-task-2-report.md  track-multi-select-playlist-backup-task-3-report.md  track-multi-select-playlist-backup-task-5-report.md  track-multi-select-playlist-backup-task-6-report.md  track-multi-select-playlist-backup-task-7-report.md  track-multi-select-playlist-backup-task-8-report.md  (+1 more)
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
build-logic/convention/: build.gradle.kts
desktopApp/: build.gradle.kts
docs/: harness-engineering.md
docs/superpowers/plans/: 2026-06-11-local-folder-scanning.md  2026-06-11-taglib-metadata-module.md  2026-06-23-miuix-theme-migration.md  2026-06-24-background-scanning.md  2026-06-24-folder-import-album-browse.md  2026-06-24-now-playing-panel-artwork-ordering.md  2026-06-25-compose-artwork-cache.md  2026-06-25-dev-panel-prev-track.md  2026-06-25-ios-native-swiftui-migration.md  2026-06-25-ios-scan-label-clear-library.md  2026-06-25-ios-swiftui-feature-fill.md  2026-06-25-ui-polish-and-ios-lockscreen.md  2026-06-26-apply-app-icons.md  2026-06-29-bottom-bar-navigation.md  2026-06-29-selectable-scrollbar-ripple.md  2026-06-29-square-artwork-swipe-back.md  2026-06-29-unified-platform-version.md  2026-06-30-explicit-navigation-stack.md  2026-06-30-music-progress-scrubber.md  2026-06-30-standardize-back-navigation.md  2026-06-30-theme-selection.md  2026-06-30-track-row-selected-copy.md  2026-07-01-track-art-thumbnails.md  2026-07-01-ui-ux-fixes-batch.md  2026-07-01-vector-icon-controls.md  2026-07-02-navigation-animation-polish.md  2026-07-02-navigation-animations.md  2026-07-03-swipe-gestures-now-playing.md  2026-07-06-adaptive-layout-miuix-blur.md  2026-07-06-i18n.md  2026-07-06-library-scroll-bar-visibility.md  2026-07-06-liquid-glass-backdrop-chrome.md  2026-07-06-nested-scroll-blur.md  2026-07-06-playback-repeat-shuffle.md  2026-07-07-adaptive-now-playing-screen.md  2026-07-07-architecture-refactor.md  2026-07-07-miuix-component-migration.md  2026-07-07-miuix-nested-scroll-top-app-bar.md  2026-07-07-miuix-top-app-bar.md  (+16 more)
gradle/: libs.versions.toml
icons/: ic_rhythhaus_monochrome.xml
iosApp/Configuration/: Config.xcconfig  Version.xcconfig
iosApp/iosApp/: AudioEngine.swift  ContentView.swift  ImportCardView.swift  Info.plist  LibraryView.swift  NowPlayingView.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosAppTests/: PlaylistBackupDocumentPoliciesTests.swift
sdd/: task-1-fix-report.md
shared/: build.gradle.kts
taglib/: build.gradle.kts
taglib/native/: CMakeLists.txt
taglib/native/include/: rh_taglib.h
taglib/native/jni/: rh_taglib_jni.cpp
taglib/native/src/: rh_taglib.cpp
(+452 files in other folders)
